change app icon

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/icon_32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="assets/icons/icon_96x96.png">
     <link rel="icon" type="image/png" sizes="192x192" href="assets/icons/icon_192x192.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="assets/icons/icon_256x256.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="assets/icons/icon_512x512.png">
 </head>
 <body>
     <div class="root"></div>
