fix some PWA stuff

--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,16 @@
     <title>Bulls and Cows</title>
 
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="application-name" content="b&c">
-    <meta name="apple-mobile-web-app-title" content="b&c">
-    <meta name="theme-color" content="#f0f0f0">
-    <meta name="msapplication-navbutton-color" content="#f0f0f0">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="theme-color" content="#606060">
+
     <meta name="msapplication-starturl" content="/">
+    <meta name="msapplication-navbutton-color" content="#606060">
+
+    <meta name="apple-mobile-web-app-title" content="b&c">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <link rel="shortcut icon" href="assets/icons/favicon.ico">
