--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link rel="icon" type="image/png" sizes="192x192" href="assets/icons/icon_192x192.png">
     <link rel="icon" type="image/png" sizes="256x256" href="assets/icons/icon_256x256.png">
     <link rel="icon" type="image/png" sizes="512x512" href="assets/icons/icon_512x512.png">
-<link rel="manifest" href="manifest.json" /><link href="main.css" rel="stylesheet"></head>
+<meta name="theme-color" content="#606060" /><link rel="manifest" href="manifest.json" /><link href="main.css" rel="stylesheet"></head>
 <body>
     <div class="root"></div>
 <script type="text/javascript" src="app.js"></script></body>
